html code my email is fixed due to head tag not in proper place

--- a/fishmarket.html
+++ b/fishmarket.html
@@ -1,6 +1,7 @@
 <html>
-	<head><h1>this is first program</h1></head>
+	<head><h1>this is first program</h1>
 	<body>
 		<a href="https://mail.google.com/mail/u/0/#inbox/FMfcgzQVzXWWxzRkjjSNJHzcbLsbJFdB"></a>
 	</body>
+	</head>
 </html>
